samples/_failures_safe/1761516772_c1bbe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7210415.c: In function ‘print_state’:
./samples/SAFE/__tmp_d7210415.c:155: error: expected ‘{’ at end of input
